# BuildUP

./: CMakeLists.txt  README  README.md  README.txt  Visualize.cpp  Visualize.hpp  bldg_generator.cpp  test.cpp
data/: lot1.dbf  lot1.sbn  lot1.sbx  lot1.shp  lot1.shx  lot1_trans.shp  lot1_trans.shx  lot6.dbf  lot6.sbn  lot6.sbx  lot6.shp  lot6.shx  lot6_trans.shp  lot6_trans.shx
data/zone1/: bati3D.dbf  bati3D.qix  bati3D.qpj  bati3D.shp  bati3D.shx  batiment.dbf  batiment.shp  batiment.shx  parcelle.qix  route.dbf  route.qix  (+2 more)
example/: CMakeLists.txt  bldg_generator.cpp  bldg_generator.hpp  bldg_generator_para.hpp  bldg_inspector.hpp  main.cpp  makerule.cpp  makerule.hpp  properties.hpp  statistics.hpp  zonetest.cpp
example/data/zone1/: parcelle.shx
example/data/zone2/: bordureSeg.shp  bordureSeg.shx
example/data/zone3/: bordureSeg.dbf  bordureSeg.shp  bordureSeg.shx  parcelle.dbf  parcelle.shp  parcelle.shx
example/data/zone4/: bordureSeg.shp
example/quickstart/: bldg_generator.hpp  makerule.hpp  quickstart.cpp
example/quickstart/data/: parcelle.shp
example/zonetest/: bldg_generator.hpp  bldg_generator_para.hpp  makerule.hpp  properties.hpp  zonetest.cpp
example/zonetest/data/zone1/: bordureSeg.dbf  bordureSeg.shp  bordureSeg.shx  parcelle.dbf
example/zonetest/data/zone2/: bordureSeg.dbf  parcelle.shp  parcelle.shx
example/zonetest/data/zone3/: bordureSeg.dbf  bordureSeg.shp  parcelle.dbf  parcelle.shx
example/zonetest/data/zone4/: bordureSeg.dbf  bordureSeg.shx  parcelle.dbf  parcelle.shp  parcelle.shx
include/: Building.hpp  Constraint.hpp  Control.hpp  Energy.hpp  Expression.hpp  Lot.hpp  Rule.hpp  bldg_generator.hpp  bldg_generator_para.hpp
plu/: Bldg.hpp  Filter.hpp  Lot.hpp  Road.hpp  Rule.hpp  sfcgalTypes.hpp
src/: CMakeLists.txt
src/buildup/: CMakeLists.txt
src/buildup/io/: file.cpp  osg.cpp
src/buildup/plu/: Building.cpp  Constraint.cpp  Energy.cpp  Lot.cpp  Procedural.cpp
src/buildup/viewer/: osg.cpp
(+125 files in other folders)
