
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
FILE(GLOB_RECURSE SRC_FILES plu/*.cpp io/*.cpp)
IF(BUILD_WITH_OSG)
	SET(SRC_FILES ${SRC_FILES} viewer/osg.cpp)
ENDIF(BUILD_WITH_OSG)

ADD_LIBRARY(BuildUP STATIC ${SRC_FILES})
INSTALL(TARGETS BuildUP ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/include/buildup DESTINATION include)
